syntax = "proto3";

package cart;

option go_package = "github.com/diki-haryadi/ecommerce-saga/internal/features/cart/delivery/grpc/proto";

service CartService {
  rpc AddItem(AddItemRequest) returns (AddItemResponse);
  rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  rpc ClearCart(ClearCartRequest) returns (ClearCartResponse);
}

message CartItem {
  string id = 1;
  string product_id = 2;
  int32 quantity = 3;
  double price = 4;
}

message Cart {
  string id = 1;
  string user_id = 2;
  repeated CartItem items = 3;
  double total = 4;
}

message AddItemRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message AddItemResponse {
  bool success = 1;
  string message = 2;
  Cart cart = 3;
}

message RemoveItemRequest {
  string user_id = 1;
  string cart_item_id = 2;
}

message RemoveItemResponse {
  bool success = 1;
  string message = 2;
}

message UpdateItemRequest {
  string user_id = 1;
  string cart_item_id = 2;
  int32 quantity = 3;
}

message UpdateItemResponse {
  bool success = 1;
  string message = 2;
  Cart cart = 3;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  Cart cart = 1;
}

message ClearCartRequest {
  string user_id = 1;
}

message ClearCartResponse {
  bool success = 1;
  string message = 2;
} 